# multi-platform-storage

./: .env.example  pyproject.toml
api/routes/: files.py
clients/: r2.py  supabase.py
core/: config.py
dependencies/: auth.py
services/: file_service.py
