[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshit",email = "workwithvrz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "boto3 (>=1.42.59,<2.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
